create example how to test (manually) angular-oauth-oidc

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,17 +1,27 @@
-<h1 *ngIf="!name">
-    Hallo
-</h1>
-<h1 *ngIf="name">
-    Hallo, {{name}}
-</h1>
- 
-<button class="btn btn-default" (click)="login()">
-    Login
-</button>
-<button class="btn btn-default" (click)="logoff()">
-    Logout
-</button>
- 
+<div>This is only a bullshit page to show the differents functionalities form angular-oauth2-oidc</div>
+
+<button class="btn btn-default" (click)="switchFlow()">change flow</button>
+
+<div [hidden]="implicitFlow">
+    <h3>Password flow</h3>
+    <div>
+        username : <input  [(ngModel)]="username" placeholder="username">
+    </div>
+    <div>
+        password : <input  [(ngModel)]="password" placeholder="password">
+    </div>
+    <div>
+        <button class="btn btn-default" (click)="loginWithPassword()">Login with password workflow</button>
+    </div>
+</div>
+<div [hidden]="!implicitFlow">
+    <h3>Implicit flow</h3>
+    <button class="btn btn-default" (click)="login()">Login implicitflow</button>
+</div>
+<div>
+ <button class="btn btn-default" (click)="logoff()">Logout</button>
+</div>
 <div>
     Username/Passwort zum Testen: max/geheim
 </div>
+ <div>{{token}}</div>
